--- a/package.json
+++ b/package.json
@@ -1,18 +1,45 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "author": {
+    "name": "Malusi Towo",
+    "email": "malusitowo@gmail.com"
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint --ext .ts,.tsx .",
+    "tsc": "tsc"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.6",
+    "@react-native-community/masked-view": "^0.1.5",
+    "@react-navigation/bottom-tabs": "^5.1.1",
+    "@react-navigation/material-top-tabs": "^5.1.14",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
+    "@types/react-native-snap-carousel": "^3.8.1",
     "expo": "~37.0.3",
+    "expo-camera": "~8.2.0",
+    "expo-constants": "^8.0.0",
+    "expo-font": "^8.0.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
+    "mobx-state-tree": "^3.16.0",
+    "native-base": "2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.5.6",
+    "react-native-raw-bottom-sheet": "^2.1.0",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-safe-area-context": "^0.6.0",
     "react-native-screens": "~2.2.0",
+    "react-native-size-matters": "^0.3.0",
+    "react-native-snap-carousel": "^3.9.0",
+    "react-native-tab-view": "^2.14.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
@@ -20,7 +47,18 @@
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.17",
     "babel-preset-expo": "~8.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-react-native-wcandillon": "^2.7.0",
+    "husky": "^4.2.3",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
+    "react-native-dotenv": "^0.2.0",
     "typescript": "~3.8.3"
   },
-  "private": true
+  "private": false,
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && npm run lint"
+    }
+  }
 }
