--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-modal": "^11.5.6",
     "react-native-raw-bottom-sheet": "^2.1.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.0",
