--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "^0.1.5",
-    "@react-navigation/bottom-tabs": "^5.1.1",
+    "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/material-top-tabs": "^5.1.14",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
@@ -25,6 +25,7 @@
     "expo-camera": "~8.2.0",
     "expo-constants": "^8.0.0",
     "expo-font": "^8.0.0",
+    "expo-image-picker": "~8.1.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "mobx-state-tree": "^3.16.0",
@@ -34,7 +35,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-modal": "^11.5.6",
-    "react-native-raw-bottom-sheet": "^2.1.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.0",
     "react-native-screens": "~2.2.0",
@@ -50,6 +51,7 @@
     "babel-preset-expo": "~8.1.0",
     "eslint": "^6.8.0",
     "eslint-config-react-native-wcandillon": "^2.7.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.3",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
