--- a/package.json
+++ b/package.json
@@ -14,41 +14,44 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.6",
-    "@react-native-community/masked-view": "^0.1.5",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/datetimepicker": "2.2.2",
+    "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/material-top-tabs": "^5.1.14",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "@types/react-native-snap-carousel": "^3.8.1",
-    "expo": "~37.0.3",
+    "expo": "^37.0.0",
     "expo-camera": "~8.2.0",
-    "expo-constants": "^8.0.0",
-    "expo-font": "^8.0.0",
+    "expo-constants": "~9.0.0",
+    "expo-font": "~8.1.0",
     "expo-image-picker": "~8.1.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "mobx-state-tree": "^3.16.0",
+    "moment": "^2.26.0",
     "native-base": "2.13.8",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
-    "react-native-gesture-handler": "^1.5.6",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-modal": "^11.5.6",
+    "react-native-ratings": "^7.2.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "^1.4.0",
-    "react-native-safe-area-context": "^0.6.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-size-matters": "^0.3.0",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-tab-view": "^2.14.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "^0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
-    "babel-preset-expo": "~8.1.0",
+    "@types/react": "^16.9.11",
+    "@types/react-native": "^0.60.22",
+    "babel-preset-expo": "^8.1.0",
     "eslint": "^6.8.0",
     "eslint-config-react-native-wcandillon": "^2.7.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -56,7 +59,7 @@
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "react-native-dotenv": "^0.2.0",
-    "typescript": "~3.8.3"
+    "typescript": "^3.8.3"
   },
   "private": false,
   "husky": {
