--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "0.26.1",
     "react-native-modal": "^11.5.6",
     "react-native-ratings": "^7.2.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
